--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,6 +2,13 @@
 <p>Task details: <%= @task.details %></p>
 <p>Is completed? <%= @task.completed %></p>
 
+<br>
+<%= link_to "Delete",
+  task_path(@task),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
+<br>
+
 
 <%= link_to("edit this task", edit_task_path) %>
 <br>
