--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,23 @@
-<h1>Tasks</h1>
+<div class="container mt-4">
+  <div class="d-flex align-items-center mb-3">
+    <h1 class="mr-3">Tasks</h1>
+    <i class="fa-solid fa-list-check fa-2x text-primary"></i>
+  </div>
 
-<p>These are your pending tasks: </p>
+  <p class="lead">These are your pending tasks:</p>
 
-<ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.title, task_details_path(task) %></li>
-  <% end %>
-</ul>
+  <ul class="list-group">
+    <% @tasks.each do |task| %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <%= link_to task.title, task_details_path(task), class: 'text-decoration-none' %>
+        <span class="badge <%= task.completed ? 'bg-success' : 'bg-danger' %>">
+          <%= task.completed ? 'Completed' : 'Not Completed' %>
+        </span>
+      </li>
+    <% end %>
+  </ul>
 
-<h3><%= link_to "Create a new task", new_task_path %></h3>
+  <h3 class="mt-4">
+    <%= link_to "Create a new task", new_task_path, class: 'btn btn-success' %>
+  </h3>
+</div>
