--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,16 +1,31 @@
-<h1>Please, complete the fields to create your task: </h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Please, complete the fields to create your task:</h1>
 
-<%= form_with model: @task do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
+  <div class="card">
+    <div class="card-body">
+      <%= form_with model: @task, local: true do |f| %>
+        <div class="mb-3">
+          <%= f.label :title, class: 'form-label' %>
+          <%= f.text_field :title, class: 'form-control' %>
+        </div>
 
-  <%= f.label :details %>
-  <%= f.text_area :details %>
+        <div class="mb-3">
+          <%= f.label :details, class: 'form-label' %>
+          <%= f.text_area :details, class: 'form-control', rows: 3 %>
+        </div>
 
-  <%= f.label :completed %>
-  <%= f.check_box :completed %>
+        <div class="mb-3 form-check">
+          <%= f.check_box :completed, class: 'form-check-input' %>
+          <%= f.label :completed, class: 'form-check-label' %>
+        </div>
 
-  <%= f.submit %>
-<% end %>
+        <%= f.submit 'Create Task', class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
 
-<h3><%= link_to "Back to homepage", tasks_path %></h3>
+  <h3 class="mt-4">
+    <%= link_to "Back to homepage", tasks_path, class: 'btn btn-secondary' %>
+  </h3>
+</div>
+
